# gemini-chat

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api_keys.db  app.py  config.example.json  config_watcher.py  docker-compose.yml  manage.bat  manage.sh  pyproject.toml  requirements.txt  server.py  version.py  wsgi.py
biz_gemini/: __init__.py  anthropic_adapter.py  api_keys.py  auth.py  biz_client.py  browser_keep_alive.py  config.py  constants.py  exceptions.py  gemini_api_adapter.py  imap_reader.py  keep_alive.py  logger.py  openai_adapter.py  redis_manager.py  remote_browser.py  web_login.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_api_keys.py  test_auth.py  test_biz_client.py  test_config.py
