[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-chat"
dynamic = ["version"]
description = "生产级 Google Business Gemini API 服务，提供 OpenAI 兼容接口"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ccpopy"}
]
keywords = [
    "gemini",
    "google",
    "api",
    "openai",
    "anthropic",
    "chatgpt",
    "proxy",
    "llm",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "gunicorn>=21.0.0",
    "python-multipart>=0.0.6",
    "httpx[socks]>=0.24.0",
    "requests[socks]>=2.31.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ccpopy/gemini-chat"
Repository = "https://github.com/ccpopy/gemini-chat"
Issues = "https://github.com/ccpopy/gemini-chat/issues"
Documentation = "https://github.com/ccpopy/gemini-chat#readme"

[project.scripts]
gemini-chat = "server:main"

[tool.setuptools.dynamic]
version = {attr = "version.VERSION"}

[tool.setuptools.packages.find]
include = ["biz_gemini*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.html", "*.css", "*.js"]

# Black 代码格式化配置
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | \.venv
    | venv
    | build
    | dist
    | __pycache__
)/
'''

# Ruff 代码检查配置
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # 行长度由 black 处理
    "B008",   # 函数调用作为默认参数（FastAPI Depends 常用）
    "B904",   # raise without from（某些场景不适用）
]

[tool.ruff.lint.isort]
known-first-party = ["biz_gemini"]

# Mypy 类型检查配置
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv/",
    "build/",
    "dist/",
    "tests/",
]

# Pytest 测试配置
[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: 标记为慢速测试",
    "integration: 集成测试，需要外部服务",
]

# Coverage 覆盖率配置
[tool.coverage.run]
source = ["biz_gemini"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
